# math

./: CMakeLists.txt  Doxyfile.in  Mainpage.dox  README
src/: Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  MathApi.h  Platform.h  Quaternion.cpp  Quaternion.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
